Closed Bug 210094 Opened 23 years ago Closed 17 years ago

[FIX]Specifying min-height on fieldset tag has no effect.

Categories

(Core :: Layout: Form Controls, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mcknzm, Assigned: bzbarsky)

References

Details

(Keywords: testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030612 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4) Gecko/20030612 When using min-height with fieldset tag, it has no effect. But when using min-height with div, it works as expected. Reproducible: Always Steps to Reproduce: 1. Create a html file with this code in it: ------ <fieldset style="min-height: 200px; border: 1px solid black;"> <legend>min-height test</legend> <p>Test content.</p> </fieldset> <div style="min-height: 200px; border: 1px solid black;"> <p>Test content.</p> </div> ------ 2. Open created html file with Mozilla. Actual Results: Fieldset block's height is not 200px. Div block's height is 200px. Expected Results: Fieldset block's height should have been 200px.
For now, this is a form controls bug, although it might be nice to refactor code so the necessary code doesn't need to be copied all over the place.
Assignee: block-and-inline → form
Component: Layout: Block & Inline → Layout: Form Controls
QA Contact: ian → desale
Attached file testcase
Testcase along the lines of the code in the bug report. Works as expected in Opera 7.
Confirm new, added kw testcase
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
This could probably be fixed by adding inherit for min-height and max-height to the *|*:-moz-fieldset-content rule in forms.css....
...not unless we implement a different meaning of 'inherit', which we may for CSS2.1.
It doesn't look like 'inherit' changed to the extent that bz's proposed fix would work. http://www.w3.org/TR/CSS2/cascade.html#value-def-inherit http://www.w3.org/TR/CSS21/cascade.html#value-def-inherit Having said that, I'm not sure what the problem with the original meaning was.
> It doesn't look like 'inherit' changed The text describing 'inherit' did not change, but the definition of "computed value" did, actually. That said, my proposal won't work because the computed value for percent heights is the percentage, so "min-height: 50%" won't work right if we just use inherit.
no effect in Mac OS X 10.4.2 and no effect in Windows XP
I've just come upon this bug as of June 2007. Min-height on fieldset still doesn't work. Is this bug going to be resolved anytime soon? Now I use javascript to make it work. Thanks.
Depends on: 388084
February 2007 and is still not fixed. I've fallen victim to this bug a few times now.
End of May 2008 - still not fixed. Hope FF3 got it right..
Please stop with the "not fixed" comments. It's obviously not fixed: the bug is still open. It won't be fixed in Firefox 3 (which is in code freeze and has been for a while). Sending out spam mail to everyone cced on the bug every so often won't get this fixed faster. It's on my (long) list of things to fix, but to be honest it's a lower priority than a lot of them. If you think it needs to happen faster, I'm happy to point you at the relevant code and so forth. Please mail me if you want to work on this.
Assignee: layout.form-controls → bzbarsky
Status: NEW → ASSIGNED
Attachment #331388 - Flags: superreview?(dbaron)
Attachment #331388 - Flags: review?(dbaron)
Summary: Specifying min-height on fieldset tag has no effect. → [FIX]Specifying min-height on fieldset tag has no effect.
Comment on attachment 331388 [details] [diff] [review] This should do it r+sr=dbaron, if you also add a != test comparing the reference to a reference with a different height, to ensure that fieldsets have something that makes their height visible.
Attachment #331388 - Flags: superreview?(dbaron)
Attachment #331388 - Flags: superreview+
Attachment #331388 - Flags: review?(dbaron)
Attachment #331388 - Flags: review+
Added such a test, and pushed changeset 8603d5d17077.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: