Bug 210094.  Make min-height and max-height work on fieldset.  r+sr=dbaron